[package]
name = "av_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon        = "1.10"
crossbeam    = "0.8"
walkdir      = "2.5"
memmap2      = "0.9"
blake3       = "1.5"
yara-x       = "0.8"
dashmap      = "6"
bloomfilter  = "1"
once_cell    = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
num_cpus     = "1.16"
hex          = "0.4"
anyhow       = "1" 

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1  